# Typed-Local-LLM-Client

./: README.md  benchmark-summary.md  benchmark.py  benchmark.txt  handoff-2026-06-15.md  portfolio-plan-alignment-2026-06-16.md  pyproject.toml  pytest.ini  requirements.txt
llm_client/: client.py  exceptions.py  retry.py  schemas.py
tests/: test_client.py  test_retry.py  test_schemas.py
