[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-client"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.4.0",
    "pydantic>=2.13.4",
    "psutil>=7.2.2",
]

[tool.setuptools.packages.find]
include = ["llm_client*"]
